# Aetherebirth

./: .gitignore  README.md  animation.py  dialog.py  entity.py  game.py  main.py  map.py  player.py  pyproject.toml  requirements.txt  server.mjs  server.py  ui.py
.github/workflows/: docs.yml  push_build.yml
assets/maps/: castle_map.tmx  castle_map_test.tmx  clairiere_map.tmx  maison1_map.tmx  maison2_map.tmx  maison3_map.tmx  test_map.tmx  village_map.tmx
assets/maps/tiled_ressources/tilesets/: aurora.tsx  bridge.tsx  grass.tsx  plant.tsx  props.tsx  shadow.tsx  shadow_plant.tsx  stone_ground.tsx  structure.tsx  wall.tsx  water.tsx  water_animated.tsx
assets/ressources/: animated_heart.clip
save_data/: current_map.save  player_health.save  player_position.save  read_me
server_src/: main.py  server.py
src/: game.py
src/entity/: __init__.py  entity.py  player.py
src/map/: map.py
src/networking/: __init__.py  client.py  entity.py  network.py
src/save/: __init__.py  save_load_manager.py
src/ui/: __init__.py  animation.py  dialog.py  ui.py
src/utils/: __init__.py  string.py
utils/: string.py
