[tool.poetry]
name = "aetherebirth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
pyscroll = "^2.31"
PyTMX = "^3.32"
pygase = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
